--- a/src/main/resources/templates/Plate/show.html
+++ b/src/main/resources/templates/Plate/show.html
@@ -136,7 +136,6 @@ document.addEventListener("DOMContentLoaded", function() {
         }
     }
 
-    // Display the results count for the second search input
     var resultsCountElement = document.getElementById('resultsCount2');
     if (resultsCountElement) {
         resultsCountElement.textContent = count;
@@ -145,7 +144,7 @@ document.addEventListener("DOMContentLoaded", function() {
         resultsCountElement = document.createElement('div');
         resultsCountElement.id = 'resultsCount2';
         resultsCountElement.textContent = count;
-        input.parentNode.appendChild(resultsCountElement); // Appending to the parent of the input
+        input.parentNode.appendChild(resultsCountElement);
     }
 });
 
