--- a/src/main/resources/templates/Product/available-products.html
+++ b/src/main/resources/templates/Product/available-products.html
@@ -161,7 +161,7 @@
                                                                 <div class="d-flex flex-column align-items-center">
                                                                     <!-- Изображение на продукта -->
                                                                     <img th:if="${productPackageMapImages.containsKey(productPrice.product.packageId)}"
-                                                                         th:src="@{${backendBaseUrl} + '/' + ${productPackageMapImages.get(productPrice.product.packageId)}}"
+                                                                         th:src="@{${S3bucketImagesLink} + '/' + ${productPackageMapImages.get(productPrice.product.packageId)}}"
                                                                          class="img-fluid mb-3" style="max-height: 250px; max-width: 250px;">
                                                                     <img th:unless="${productPackageMapImages.containsKey(productPrice.product.packageId)}"
                                                                          src="/img/photos/noImage.png" class="img-fluid mb-3" style="max-height: 250px; max-width: 250px;">
