--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -147,6 +147,12 @@
                             <i class="fas fa-shipping-fast"></i> <span class="align-middle">Транспортиране на продукти</span>
                         </a>
                     </li>
+
+                    <li class="sidebar-item">
+                        <a id="nav-show10" class="sidebar-link" href="/manufactured-product/all">
+                            <i class="fas fa-industry"></i> <span class="align-middle">Произведена продукция</span>
+                        </a>
+                    </li>
                 </th:block>
                 <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
                     <li class="sidebar-item">
